Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/V3d/V3dOrthographicView.h

#ifndef V3d_OrthographicView_H
#define V3d_OrthographicView_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* V3d_OrthographicView_Ctor79560492(
	void* VM);
extern "C" DECL_EXPORT void* V3d_OrthographicView_Ctor4B0A5FC8(
	void* VM,
	void* V);
extern "C" DECL_EXPORT void* V3d_OrthographicView_Ctor4E6B6F5D(
	void* VM,
	void* V);
extern "C" DECL_EXPORT void* V3d_OrthographicView_Copy(void* instance);
extern "C" DECL_EXPORT void V3dOrthographicView_Dtor(void* instance);

#endif